<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarryChat</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="cmd">Type Message</string>
    <string name="barry">Hello BarryBot!</string>
    <string name="list_title">USER LIST</string>
    <string name="refresh_usr">Refresh</string>
    <string name="conversation">CONVERSATION</string>
    <string name="kill">disconnect</string>

</resources>
