<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:weightSum="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.99">

            <TextView
                android:text="@string/list_title"
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:gravity="top"
                android:maxLines = "200"
                android:scrollbars = "vertical"
                android:id="@+id/txtUserList" />

            <TextView
                android:text="@string/barry"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="top"
                android:maxLines = "200"
                android:scrollbars = "vertical"
                android:id="@+id/txtServerResponse" />

        </LinearLayout>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cmd"
            android:id="@+id/cmdInput" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/btnRefreshUsr"
                android:text="@string/refresh_usr" />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:id="@+id/btnKill"
                android:text="Kill" />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/btnSendCmd"
                android:text="@string/send" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>