<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity$PlaceholderFragment">





<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:weightSum="1">
    <TextView
        android:text="@string/barry"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.99"
        android:gravity="top"
        android:maxLines = "200"
        android:scrollbars = "vertical"
        android:id="@+id/txtServerResponse" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cmd"
        android:id="@+id/cmdInput" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:id="@+id/btnKill"
            android:text="Kill" />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/btnSendCmd"
            android:text="@string/send" />

    </LinearLayout>
</LinearLayout>

</RelativeLayout>
